# cosmwasm-contracts

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
artifacts/: astroport_token.wasm
contracts/admin-core/: Cargo.toml  README.md
contracts/admin-core/examples/: schema.rs
contracts/admin-core/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/jobs-registry/: .gitpod.Dockerfile  Cargo.toml  NOTICE  README.md
contracts/jobs-registry/examples/: schema.rs
contracts/jobs-registry/schema/: config.json  execute_msg.json  query_msg.json
contracts/jobs-registry/src/: contract.rs  error.rs  jobs.rs  lib.rs  msg.rs  querier.rs  state.rs
contracts/jobs-registry/src/testing/: tests.rs
contracts/product-factory/: Cargo.toml  NOTICE  README.md
contracts/product-factory/examples/: schema.rs
contracts/product-factory/schema/: description.json  query_msg.json
contracts/product-factory/src/: contract.rs  error.rs  lib.rs  state.rs
contracts/product-factory/src/testing/: tests.rs
contracts/product-factory/tests/: integration.rs
contracts/stub-anchor/: Cargo.toml  README.md
contracts/stub-anchor/examples/: schema.rs
contracts/stub-anchor/schema/: execute_msg.json  query_msg.json
contracts/stub-anchor/src/: contract.rs  msg.rs  state.rs
contracts/sub1-fixed-recurring-subscriptions/: .gitignore  Cargo.toml  NOTICE  README.md
contracts/sub1-fixed-recurring-subscriptions/examples/: schema.rs
contracts/sub1-fixed-recurring-subscriptions/schema/: config.json  config_response.json  execute_msg.json  product_instantiate_msg.json  query_msg.json  subscription_info_response.json  subscriptions_response.json
contracts/sub1-fixed-recurring-subscriptions/src/: contract.rs  error.rs  lib.rs  mock_querier.rs  msg.rs  querier.rs  state.rs
contracts/sub1-fixed-recurring-subscriptions/src/testing/: mod.rs  test_fees.rs  test_worker.rs  tests.rs
contracts/sub2-p2p-recurring-transfers/: Cargo.toml  README.md
contracts/sub2-p2p-recurring-transfers/examples/: schema.rs
contracts/sub2-p2p-recurring-transfers/schema/: config.json  execute_msg.json  instantiate_msg.json  query_msg.json
contracts/sub2-p2p-recurring-transfers/src/: contract.rs  enumerable.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/sub2-p2p-recurring-transfers/src/testing/: tests.rs
contracts/subwallet/: Cargo.toml  NOTICE  README.md
contracts/subwallet-factory/: Cargo.toml  README.md
contracts/subwallet-factory/examples/: schema.rs
contracts/subwallet-factory/schema/: execute_msg.json  instantiate_msg.json  query_msg.json  subwallet_factory_config.json
contracts/subwallet-factory/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/subwallet-factory/tests/: integration.rs
contracts/subwallet/examples/: schema.rs
contracts/subwallet/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/subwallet/src/: contract.rs  error.rs  lib.rs  msg.rs  querier.rs  state.rs  tests.rs
contracts/token-stream/: Cargo.toml  NOTICE  README.md
contracts/token-stream/examples/: schema.rs
contracts/token-stream/schema/: execute_msg.json  query_msg.json
contracts/token-stream/src/: contract.rs  error.rs  lib.rs  mock_querier.rs  msg.rs  query.rs  state.rs  testing.rs  token.rs
docs/: Subscription.md  overview.md
scripts/: README.md  build_artifacts.sh  config.json  deploy.ts  env.template  helpers.ts  localterra.json  package-lock.json  package.json  suberra_sdk.ts  types.d.ts  update.ts  v1_bombay-12.json
