[package]
name = "jobs-registry"
version = "0.2.1"
authors = ["Suberra Labs <hello@suberra.io>"]
edition = "2018"
repository = "https://github.com/Suberra/suberra-contracts"
homepage = "https://suberra.io"
documentation = "https://suberra.gitbook.io/suberra/xezYp5ysfgonkGqDhddT/"


exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "0.16.2" }
cosmwasm-storage = { version = "0.16.0" }
cw-storage-plus = "0.8.1"
cw0 = "0.8.1"
cw2 = "0.8.1"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
terra-cosmwasm = { version = "2.2.0" }
cosmwasm-bignumber = "2.2.0"
suberra-core = { version = "0.2.0", path = "../../packages/suberra-core" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }

